cmake_minimum_required(VERSION 3.9)
project(mrvk_project)

set(CMAKE_CXX_STANDARD 11)

add_executable(mrvk_project
        adis16488/config/conf.yaml
        adis16488/launch/adis_driver.launch
        adis16488/launch/test.launch
        adis16488/launch/transmit.launch
        adis16488/src/comADIS.cpp
        adis16488/src/testSerial.cpp
        adis16488/CMakeLists.txt
        adis16488/package.xml
        gps_common/include/gps_common/conversions.h
        gps_common/msg/GPSFix.msg
        gps_common/msg/GPSStatus.msg
        gps_common/src/utm_odometry_node.cpp
        gps_common/CHANGELOG.rst
        gps_common/CMakeLists.txt
        gps_common/package.xml
        gps_compas_correction/config/config.yaml
        gps_compas_correction/include/gps_compas_correction/GpsCompasCorrection.h
        gps_compas_correction/launch/gps.launch
        gps_compas_correction/launch/gps_compas_correction.launch
        gps_compas_correction/launch/gps_with_correction.launch
        gps_compas_correction/src/GpsCompasCorrection.cpp
        gps_compas_correction/src/GpsCompasCorrectionNode.cpp
        gps_compas_correction/CMakeLists.txt
        gps_compas_correction/package.xml
        kv01_final/kv01_actionserver/action/move.action
        kv01_final/kv01_actionserver/src/kv01_actionserver_node.cpp
        kv01_final/kv01_actionserver/src/kv01_actionserver_node_klb4fail.cpp
        kv01_final/kv01_actionserver/src/kv01_actionserver_point.cpp
        kv01_final/kv01_actionserver/CMakeLists.txt
        kv01_final/kv01_actionserver/package.xml
        kv01_final/kv01_control/config/joint_state_controller.yaml
        kv01_final/kv01_control/config/kv01_control.yaml
        kv01_final/kv01_control/config/kv01_control_trajectory.yaml
        kv01_final/kv01_control/launch/joint_state_controller.launch
        kv01_final/kv01_control/launch/joint_state_controller_standalone.launch
        kv01_final/kv01_control/launch/kv01_control.launch
        kv01_final/kv01_control/launch/kv01_trajectory_controller.launch
        kv01_final/kv01_control/CMakeLists.txt
        kv01_final/kv01_control/package.xml
        kv01_final/kv01_description/mesh/test.scene
        kv01_final/kv01_description/src/dae_maker.cpp
        kv01_final/kv01_description/urdf/kv01.dae
        kv01_final/kv01_description/urdf/kv01.gazebo
        kv01_final/kv01_description/urdf/kv01.gv
        kv01_final/kv01_description/urdf/kv01.pdf
        kv01_final/kv01_description/urdf/kv01.urdf
        kv01_final/kv01_description/urdf/kv01.xacro
        kv01_final/kv01_description/urdf/kv01_klb3off.urdf
        kv01_final/kv01_description/urdf/kv01_klb3off.xacro
        kv01_final/kv01_description/urdf/macros.xacro
        kv01_final/kv01_description/urdf/materials.xacro
        kv01_final/kv01_description/CMakeLists.txt
        kv01_final/kv01_description/package.xml
        kv01_final/kv01_driver/include/kv01_driver/common_functions.h
        kv01_final/kv01_driver/launch/kv01_driver.launch
        kv01_final/kv01_driver/msg/joint_speed.msg
        kv01_final/kv01_driver/src/common_functions.cpp
        kv01_final/kv01_driver/src/kv01_driver_servis.cpp
        kv01_final/kv01_driver/srv/driver.srv
        kv01_final/kv01_driver/srv/serial_data.srv
        kv01_final/kv01_driver/CMakeLists.txt
        kv01_final/kv01_driver/package.xml
        kv01_final/kv01_interface/launch/kv01_interface.launch
        kv01_final/kv01_interface/launch/kv01_joystick.launch
        kv01_final/kv01_interface/launch/mrvk_interface.launch
        kv01_final/kv01_interface/launch/mrvk_joystick.launch
        kv01_final/kv01_interface/src/kv01_joystick.cpp
        kv01_final/kv01_interface/src/kv01_menu.cpp
        kv01_final/kv01_interface/CMakeLists.txt
        kv01_final/kv01_interface/package.xml
        kv01_final/kv01_klb4off_moveit_config/config/controllers.yaml
        kv01_final/kv01_klb4off_moveit_config/config/fake_controllers.yaml
        kv01_final/kv01_klb4off_moveit_config/config/joint_limits.yaml
        kv01_final/kv01_klb4off_moveit_config/config/kinematics.yaml
        kv01_final/kv01_klb4off_moveit_config/config/kv01.srdf
        kv01_final/kv01_klb4off_moveit_config/config/ompl_planning.yaml
        kv01_final/kv01_klb4off_moveit_config/launch/default_warehouse_db.launch
        kv01_final/kv01_klb4off_moveit_config/launch/demo.launch
        kv01_final/kv01_klb4off_moveit_config/launch/demo_sim.launch
        kv01_final/kv01_klb4off_moveit_config/launch/fake_moveit_controller_manager.launch.xml
        kv01_final/kv01_klb4off_moveit_config/launch/joystick_control.launch
        kv01_final/kv01_klb4off_moveit_config/launch/kv01_moveit_controller_manager.launch.xml
        kv01_final/kv01_klb4off_moveit_config/launch/kv01_moveit_sensor_manager.launch.xml
        kv01_final/kv01_klb4off_moveit_config/launch/move_group.launch
        kv01_final/kv01_klb4off_moveit_config/launch/moveit.rviz
        kv01_final/kv01_klb4off_moveit_config/launch/moveit_rviz.launch
        kv01_final/kv01_klb4off_moveit_config/launch/ompl_planning_pipeline.launch.xml
        kv01_final/kv01_klb4off_moveit_config/launch/planning_context.launch
        kv01_final/kv01_klb4off_moveit_config/launch/planning_pipeline.launch.xml
        kv01_final/kv01_klb4off_moveit_config/launch/run_benchmark_ompl.launch
        kv01_final/kv01_klb4off_moveit_config/launch/sensor_manager.launch.xml
        kv01_final/kv01_klb4off_moveit_config/launch/setup_assistant.launch
        kv01_final/kv01_klb4off_moveit_config/launch/trajectory_execution.launch.xml
        kv01_final/kv01_klb4off_moveit_config/launch/warehouse.launch
        kv01_final/kv01_klb4off_moveit_config/launch/warehouse_settings.launch.xml
        kv01_final/kv01_klb4off_moveit_config/CMakeLists.txt
        kv01_final/kv01_klb4off_moveit_config/package.xml
        kv01_final/kv01_moveit_config/config/controllers.yaml
        kv01_final/kv01_moveit_config/config/fake_controllers.yaml
        kv01_final/kv01_moveit_config/config/joint_limits.yaml
        kv01_final/kv01_moveit_config/config/kinematics.yaml
        kv01_final/kv01_moveit_config/config/kv01.srdf
        kv01_final/kv01_moveit_config/config/ompl_planning.yaml
        kv01_final/kv01_moveit_config/launch/default_warehouse_db.launch
        kv01_final/kv01_moveit_config/launch/demo.launch
        kv01_final/kv01_moveit_config/launch/demo_sim.launch
        kv01_final/kv01_moveit_config/launch/fake_moveit_controller_manager.launch.xml
        kv01_final/kv01_moveit_config/launch/joystick_control.launch
        kv01_final/kv01_moveit_config/launch/kv01_moveit_controller_manager.launch.xml
        kv01_final/kv01_moveit_config/launch/kv01_moveit_sensor_manager.launch.xml
        kv01_final/kv01_moveit_config/launch/move_group.launch
        kv01_final/kv01_moveit_config/launch/moveit.rviz
        kv01_final/kv01_moveit_config/launch/moveit_rviz.launch
        kv01_final/kv01_moveit_config/launch/ompl_planning_pipeline.launch.xml
        kv01_final/kv01_moveit_config/launch/planning_context.launch
        kv01_final/kv01_moveit_config/launch/planning_pipeline.launch.xml
        kv01_final/kv01_moveit_config/launch/run_benchmark_ompl.launch
        kv01_final/kv01_moveit_config/launch/sensor_manager.launch.xml
        kv01_final/kv01_moveit_config/launch/setup_assistant.launch
        kv01_final/kv01_moveit_config/launch/trajectory_execution.launch.xml
        kv01_final/kv01_moveit_config/launch/warehouse.launch
        kv01_final/kv01_moveit_config/launch/warehouse_settings.launch.xml
        kv01_final/kv01_moveit_config/CMakeLists.txt
        kv01_final/kv01_moveit_config/package.xml
        kv01_final/kv01_sim/launch/empty_world.launch
        kv01_final/kv01_sim/launch/gazebo_sim.launch
        kv01_final/kv01_sim/launch/gazebo_sim_trajectory.launch
        kv01_final/kv01_sim/launch/moveit_gazebo_sim_final.launch
        kv01_final/kv01_sim/launch/rviz_sim.launch
        kv01_final/kv01_sim/launch/rviz_sim_gui.launch
        kv01_final/kv01_sim/worlds/my_world.world
        kv01_final/kv01_sim/CMakeLists.txt
        kv01_final/kv01_sim/package.xml
        kv01_final/kv01_sim/urdf.rviz
        kv01_final/readme.txt
        meassurment/src/meassurement_node.cpp
        meassurment/src/navigator.cpp
        meassurment/CMakeLists.txt
        meassurment/package.xml
        mrvk_2dnav/config/dwa/base_local_planner.yaml
        mrvk_2dnav/config/dwa/costmap_common.yaml
        mrvk_2dnav/config/dwa/global_costmap.yaml
        mrvk_2dnav/config/dwa/local_costmap.yaml
        mrvk_2dnav/config/dwa/recovery_behaviors.yaml
        mrvk_2dnav/config/dwa_osm/base_local_planner.yaml
        mrvk_2dnav/config/dwa_osm/costmap_common.yaml
        mrvk_2dnav/config/dwa_osm/costmap_observaion_sources.yaml
        mrvk_2dnav/config/dwa_osm/global_costmap.yaml
        mrvk_2dnav/config/dwa_osm/local_costmap.yaml
        mrvk_2dnav/config/dwa_osm/osm_global_planner.yaml
        mrvk_2dnav/config/dwa_osm/osm_parser.yaml
        mrvk_2dnav/config/dwa_osm/recovery_behaviors.yaml
        mrvk_2dnav/config/vfh/base_local_planner.yaml
        mrvk_2dnav/config/vfh/costmap_common.yaml
        mrvk_2dnav/config/vfh/global_costmap.yaml
        mrvk_2dnav/config/vfh/local_costmap.yaml
        mrvk_2dnav/launch/dwa_navigation.launch
        mrvk_2dnav/launch/dwa_osm_navigation.launch
        mrvk_2dnav/launch/move_base_dwa.launch
        mrvk_2dnav/launch/move_base_dwa_osm.launch
        mrvk_2dnav/launch/move_base_vfh.launch
        mrvk_2dnav/launch/mrvk_master.launch
        mrvk_2dnav/launch/vfh_navigation.launch
        mrvk_2dnav/rviz/mavigation_kinetic.rviz
        mrvk_2dnav/rviz/navigation_osm.rviz
        mrvk_2dnav/rviz/navigation_rviz_config.rviz
        mrvk_2dnav/CMakeLists.txt
        mrvk_2dnav/package.xml
        mrvk_dependencies/driver_common/driver_base/include/driver_base/driver.h
        mrvk_dependencies/driver_common/driver_base/include/driver_base/driver_node.h
        mrvk_dependencies/driver_common/driver_base/msg/ConfigString.msg
        mrvk_dependencies/driver_common/driver_base/msg/ConfigValue.msg
        mrvk_dependencies/driver_common/driver_base/msg/SensorLevels.msg
        mrvk_dependencies/driver_common/driver_base/CHANGELOG.rst
        mrvk_dependencies/driver_common/driver_base/CMakeLists.txt
        mrvk_dependencies/driver_common/driver_base/mainpage.dox
        mrvk_dependencies/driver_common/driver_base/package.xml
        mrvk_dependencies/driver_common/driver_common/CHANGELOG.rst
        mrvk_dependencies/driver_common/driver_common/CMakeLists.txt
        mrvk_dependencies/driver_common/driver_common/package.xml
        mrvk_dependencies/driver_common/timestamp_tools/include/timestamp_tools/periodic_timestamp_min_filter.h
        mrvk_dependencies/driver_common/timestamp_tools/include/timestamp_tools/trigger_matcher.h
        mrvk_dependencies/driver_common/timestamp_tools/test/test_trigger_matcher.cpp
        mrvk_dependencies/driver_common/timestamp_tools/CHANGELOG.rst
        mrvk_dependencies/driver_common/timestamp_tools/CMakeLists.txt
        mrvk_dependencies/driver_common/timestamp_tools/mainpage.dox
        mrvk_dependencies/driver_common/timestamp_tools/package.xml
        mrvk_dependencies/hokuyo_node/cfg/Hokuyo.cfg
        mrvk_dependencies/hokuyo_node/include/hokuyo_node/hokuyo.h
        mrvk_dependencies/hokuyo_node/src/CMakeLists.txt
        mrvk_dependencies/hokuyo_node/src/getFirmwareVersion.cpp
        mrvk_dependencies/hokuyo_node/src/getID.cpp
        mrvk_dependencies/hokuyo_node/src/hokuyo.cpp
        mrvk_dependencies/hokuyo_node/src/hokuyo_node.cpp
        mrvk_dependencies/hokuyo_node/src/timestamp_test.cpp
        mrvk_dependencies/hokuyo_node/test/TODO
        mrvk_dependencies/hokuyo_node/test/unplug_test.launch
        mrvk_dependencies/hokuyo_node/CHANGELOG.rst
        mrvk_dependencies/hokuyo_node/CMakeLists.txt
        mrvk_dependencies/hokuyo_node/COPYING.lib
        mrvk_dependencies/hokuyo_node/hokuyo_test.launch
        mrvk_dependencies/hokuyo_node/hokuyo_test.vcg
        mrvk_dependencies/hokuyo_node/hokuyo_test_intensity.launch
        mrvk_dependencies/hokuyo_node/package.xml
        mrvk_description/launch/load_description.launch
        mrvk_description/launch/test_description.launch
        mrvk_description/launch/test_description.rviz
        mrvk_description/urdf/common.urdf.xacro
        mrvk_description/urdf/kv01.urdf.xacro
        mrvk_description/urdf/materials.urdf.xacro
        mrvk_description/urdf/mrvk.urdf.xacro
        mrvk_description/urdf/robot.urdf.xacro
        mrvk_description/CMakeLists.txt
        mrvk_description/package.xml
        mrvk_driver/cfg/hokuyo_filter_cfg.yaml
        mrvk_driver/cfg/RobotDynParam.cfg
        mrvk_driver/config/mrvk_controllers.conf
        mrvk_driver/config/mrvk_driver.yaml
        mrvk_driver/include/mrvk_driver/callbacks.h
        mrvk_driver/include/mrvk_driver/command.h
        mrvk_driver/include/mrvk_driver/communication_interface.h
        mrvk_driver/include/mrvk_driver/conversions.h
        mrvk_driver/include/mrvk_driver/hwInterface.h
        mrvk_driver/include/mrvk_driver/mrvk_serial.h
        mrvk_driver/install/49-teensy.rules
        mrvk_driver/install/96-mrvk-boards.rules
        mrvk_driver/install/97-gps.rules
        mrvk_driver/install/98-adis-devices.rules
        mrvk_driver/install/99-hokuyo.rules
        mrvk_driver/install/run_me.sh
        mrvk_driver/launch/driver.launch
        mrvk_driver/launch/gps.launch
        mrvk_driver/launch/load_controllers.launch
        mrvk_driver/launch/mapping.launch
        mrvk_driver/launch/spawn_diff_controller.launch
        mrvk_driver/launch/start_group_velocity_controller.launch
        mrvk_driver/launch/start_velocity_controllers.launch
        mrvk_driver/launch/user_interface.launch
        mrvk_driver/msg/Battery.msg
        mrvk_driver/msg/Error_log.msg
        mrvk_driver/msg/Mb_status.msg
        mrvk_driver/msg/Mcb_status.msg
        mrvk_driver/msg/Power_managment.msg
        mrvk_driver/rviz/mapping.rviz
        mrvk_driver/src/callbacks.cpp
        mrvk_driver/src/command.cpp
        mrvk_driver/src/communication_interface.cpp
        mrvk_driver/src/conversions.cpp
        mrvk_driver/src/hwInterface.cpp
        mrvk_driver/src/mrvk_driver.cpp
        mrvk_driver/src/poznamky
        mrvk_driver/src/robot_control.cpp
        mrvk_driver/CMakeLists.txt
        mrvk_driver/package.xml
        mrvk_gazebo/launch/mrvk_empty_world.launch
        mrvk_gazebo/launch/mrvk_willowgarage_world.launch
        mrvk_gazebo/launch/spawn_mrvk.launch
        mrvk_gazebo/urdf/mrvk.gazebo
        mrvk_gazebo/urdf/robot.urdf.xacro
        mrvk_gazebo/CMakeLists.txt
        mrvk_gazebo/package.xml
        mrvk_gui/include/mrvk_gui/DiagnosticItem.h
        mrvk_gui/include/mrvk_gui/DiagnosticModel.h
        mrvk_gui/include/mrvk_gui/DiagnosticsWidget.h
        mrvk_gui/include/mrvk_gui/MrvkGuiPlugin.h
        mrvk_gui/launch/gui_test.launch
        mrvk_gui/Resources/Mrvk.jpg
        mrvk_gui/src/DiagnosticItem.cpp
        mrvk_gui/src/DiagnosticModel.cpp
        mrvk_gui/src/DiagnosticsWidget.cpp
        mrvk_gui/src/MrvkGuiPlugin.cpp
        mrvk_gui/uis/ControlWidget.ui
        mrvk_gui/uis/controlwidget.ui
        mrvk_gui/uis/DiagnosticsWidget.ui
        mrvk_gui/uis/MainWidget.ui
        mrvk_gui/CMakeLists.txt
        mrvk_gui/mrvk_gui_plugin.xml
        mrvk_gui/package.xml
        mrvk_laser_filters/launch/custom_rosconsole.conf
        mrvk_laser_filters/launch/hokuyo_filter.launch
        mrvk_laser_filters/launch/laser_filter.launch
        mrvk_laser_filters/launch/mrvk_laser_filters.launch
        mrvk_laser_filters/launch/test_description_laser.rviz
        mrvk_laser_filters/scripts/mrvk_laser_filter.py
        mrvk_laser_filters/scripts/ring_buffer.py
        mrvk_laser_filters/CMakeLists.txt
        mrvk_laser_filters/package.xml
        mrvk_supervisor/config/supervisor_param.yaml
        mrvk_supervisor/launch/mrvk_supervisor.launch
        mrvk_supervisor/src/mrvk_supervisor.cpp
        mrvk_supervisor/CMakeLists.txt
        mrvk_supervisor/package.xml
        nmea_navsat_driver/scripts/nmea_serial_driver
        nmea_navsat_driver/scripts/nmea_topic_driver
        nmea_navsat_driver/scripts/nmea_topic_serial_reader
        nmea_navsat_driver/src/libnmea_navsat_driver/__init__.py
        nmea_navsat_driver/src/libnmea_navsat_driver/checksum_utils.py
        nmea_navsat_driver/src/libnmea_navsat_driver/driver.py
        nmea_navsat_driver/src/libnmea_navsat_driver/parser.py
        nmea_navsat_driver/CHANGELOG.rst
        nmea_navsat_driver/CMakeLists.txt
        nmea_navsat_driver/package.xml
        nmea_navsat_driver/README.rst
        nmea_navsat_driver/setup.py
        reverse_movement_recovery/include/reverse_movement_recovery/reverse_movement_recovery.h
        reverse_movement_recovery/src/reverse_movement_recovery.cpp
        reverse_movement_recovery/CMakeLists.txt
        reverse_movement_recovery/package.xml
        reverse_movement_recovery/rmr_plugin.xml
        serial/doc/Doxyfile
        serial/doc/serial.dox
        serial/examples/serial_example.cc
        serial/include/serial/impl/unix.h
        serial/include/serial/impl/win.h
        serial/include/serial/serial.h
        serial/include/serial/v8stdint.h
        serial/src/impl/list_ports/list_ports_linux.cc
        serial/src/impl/list_ports/list_ports_osx.cc
        serial/src/impl/list_ports/list_ports_win.cc
        serial/src/impl/unix.cc
        serial/src/impl/win.cc
        serial/src/serial.cc
        serial/tests/proof_of_concepts/mdc2250.cc
        serial/tests/proof_of_concepts/python_serial_test.py
        serial/tests/proof_of_concepts/tokenizer.cc
        serial/tests/unit/unix_timer_tests.cc
        serial/tests/CMakeLists.txt
        serial/tests/unix_serial_tests.cc
        serial/visual_studio/serial/serial.vcxproj
        serial/visual_studio/serial/serial.vcxproj.filters
        serial/visual_studio/test_serial/test_serial.vcxproj
        serial/visual_studio/test_serial/test_serial.vcxproj.filters
        serial/visual_studio/visual_studio.sln
        serial/CHANGELOG.rst
        serial/changes.txt
        serial/CMakeLists.txt
        serial/Makefile
        serial/package.xml
        serial/README.md
        serial/serial.sublime-project
        vfh_local_planner/include/vfh_local_planner/vfh_planner.h
        vfh_local_planner/include/vfh_local_planner/vfh_planner_ros.h
        vfh_local_planner/src/vfh_planner.cpp
        vfh_local_planner/src/vfh_planner_ros.cpp
        vfh_local_planner/CMakeLists.txt
        vfh_local_planner/package.xml
        vfh_local_planner/vfh_blp_plugin.xml
        vision/beer_locator/src/beer_locator.cpp
        vision/beer_locator/CATKIN_IGNORE
        vision/beer_locator/CMakeLists.txt
        vision/beer_locator/package.xml
        vision/beer_locator/ReadMe.txt
        vision/beer_locator2/CMakeLists.txt
        vision/beer_locator2/package.xml
        vision/iai_kinect2/iai_kinect2/CMakeLists.txt
        vision/iai_kinect2/iai_kinect2/package.xml
        vision/iai_kinect2/kinect2_bridge/data/196605135147/calib_color.yaml
        vision/iai_kinect2/kinect2_bridge/data/196605135147/calib_depth.yaml
        vision/iai_kinect2/kinect2_bridge/data/196605135147/calib_ir.yaml
        vision/iai_kinect2/kinect2_bridge/data/196605135147/calib_pose.yaml
        vision/iai_kinect2/kinect2_bridge/data/299150235147/calib_color.yaml
        vision/iai_kinect2/kinect2_bridge/data/299150235147/calib_ir.yaml
        vision/iai_kinect2/kinect2_bridge/data/299150235147/calib_pose.yaml
        vision/iai_kinect2/kinect2_bridge/include/kinect2_bridge/kinect2_definitions.h
        vision/iai_kinect2/kinect2_bridge/launch/kinect2_bridge.launch
        vision/iai_kinect2/kinect2_bridge/src/kinect2_bridge.cpp
        vision/iai_kinect2/kinect2_bridge/CMakeLists.txt
        vision/iai_kinect2/kinect2_bridge/nodelet_plugins.xml
        vision/iai_kinect2/kinect2_bridge/package.xml
        vision/iai_kinect2/kinect2_bridge/README.md
        vision/iai_kinect2/kinect2_calibration/include/kinect2_calibration/kinect2_calibration_definitions.h
        vision/iai_kinect2/kinect2_calibration/patterns/chess5x7x0.03.pdf
        vision/iai_kinect2/kinect2_calibration/patterns/chess5x7x0.03.svg
        vision/iai_kinect2/kinect2_calibration/patterns/chess7x9x0.025.pdf
        vision/iai_kinect2/kinect2_calibration/patterns/chess7x9x0.025.svg
        vision/iai_kinect2/kinect2_calibration/patterns/chess9x11x0.02.pdf
        vision/iai_kinect2/kinect2_calibration/patterns/chess9x11x0.02.svg
        vision/iai_kinect2/kinect2_calibration/src/kinect2_calibration.cpp
        vision/iai_kinect2/kinect2_calibration/CMakeLists.txt
        vision/iai_kinect2/kinect2_calibration/package.xml
        vision/iai_kinect2/kinect2_calibration/README.md
        vision/iai_kinect2/kinect2_registration/cmake/CheckOpenCLICDLoader.cmake
        vision/iai_kinect2/kinect2_registration/cmake/FindOpenCL.cmake
        vision/iai_kinect2/kinect2_registration/cmake/kinect2_registration.cmake.in
        vision/iai_kinect2/kinect2_registration/include/internal/CL/cl.hpp
        vision/iai_kinect2/kinect2_registration/include/kinect2_registration/kinect2_console.h
        vision/iai_kinect2/kinect2_registration/include/kinect2_registration/kinect2_registration.h
        vision/iai_kinect2/kinect2_registration/src/depth_registration.cl
        vision/iai_kinect2/kinect2_registration/src/depth_registration_cpu.cpp
        vision/iai_kinect2/kinect2_registration/src/depth_registration_cpu.h
        vision/iai_kinect2/kinect2_registration/src/depth_registration_opencl.cpp
        vision/iai_kinect2/kinect2_registration/src/depth_registration_opencl.h
        vision/iai_kinect2/kinect2_registration/src/kinect2_registration.cpp
        vision/iai_kinect2/kinect2_registration/CMakeLists.txt
        vision/iai_kinect2/kinect2_registration/package.xml
        vision/iai_kinect2/kinect2_registration/README.md
        vision/iai_kinect2/kinect2_viewer/src/viewer.cpp
        vision/iai_kinect2/kinect2_viewer/CMakeLists.txt
        vision/iai_kinect2/kinect2_viewer/package.xml
        vision/iai_kinect2/kinect2_viewer/README.md
        vision/iai_kinect2/LICENSE
        vision/iai_kinect2/README.md
        vision/kinect_test/launch/kinect2_bridge.launch
        vision/kinect_test/launch/test_octomap.launch
        vision/kinect_test/src/kinect_transform.cpp
        vision/kinect_test/CMakeLists.txt
        vision/kinect_test/kinectTest.rviz
        vision/kinect_test/package.xml
        vision/mrvk_sidewalk/calib/calibEdgePointDistribution.ods
        vision/mrvk_sidewalk/calib/calibration.jpg
        vision/mrvk_sidewalk/calib/calibrationMarked.jpg
        vision/mrvk_sidewalk/calib/sidewalkTransformCalib.yaml
        vision/mrvk_sidewalk/config/sidewalk_config.yaml
        vision/mrvk_sidewalk/include/mrvk_sidewalk/cloud_processing.h
        vision/mrvk_sidewalk/launch/kinect_detect_sidewalk.launch
        vision/mrvk_sidewalk/launch/kinect_recognize_sidewalk.launch
        vision/mrvk_sidewalk/launch/mrvk_sidewalk.launch
        vision/mrvk_sidewalk/launch/pavement_config.rviz
        vision/mrvk_sidewalk/launch/video_recognize_sidewalk.launch
        vision/mrvk_sidewalk/src/misc_tools/misc_tools.cpp
        vision/mrvk_sidewalk/src/misc_tools/misc_tools.h
        vision/mrvk_sidewalk/src/pavement_to_cloud/pavement_to_cloud.cpp
        vision/mrvk_sidewalk/src/pavement_to_cloud/pavement_to_cloud.h
        vision/mrvk_sidewalk/src/pavement_to_marker/pavement_to_marker.cpp
        vision/mrvk_sidewalk/src/pavement_to_marker/pavement_to_marker.h
        vision/mrvk_sidewalk/src/recognize_sidewalk/picture_segmentation.cpp
        vision/mrvk_sidewalk/src/recognize_sidewalk/picture_segmentation.h
        vision/mrvk_sidewalk/src/recognize_sidewalk/recognize_sidewalk.cpp
        vision/mrvk_sidewalk/src/recognize_sidewalk/recognize_sidewalk.h
        vision/mrvk_sidewalk/src/recognize_sidewalk/segment_class.hpp
        vision/mrvk_sidewalk/src/recognize_sidewalk/SidewalkEdge.cpp
        vision/mrvk_sidewalk/src/recognize_sidewalk/SidewalkEdge.h
        vision/mrvk_sidewalk/src/cloud_processing.cpp
        vision/mrvk_sidewalk/src/recognize_sidewalk_kinect.cpp
        vision/mrvk_sidewalk/src/recognize_sidewalk_video.cpp
        vision/mrvk_sidewalk/src/RecognizeSidewalkParams.cpp
        vision/mrvk_sidewalk/src/RecognizeSidewalkParams.h
        vision/mrvk_sidewalk/CMakeLists.txt
        vision/mrvk_sidewalk/package.xml
        vision/mrvk_sidewalk/README
        wait_and_clear_costmap_recovery/include/wait_and_clear_costmap_recovery/wait_and_clear_costmap_recovery.h
        wait_and_clear_costmap_recovery/src/wait_and_clear_costmap_recovery.cpp
        wait_and_clear_costmap_recovery/CMakeLists.txt
        wait_and_clear_costmap_recovery/package.xml
        wait_and_clear_costmap_recovery/waccr_plugin.xml
        adis16488.tar.gz)
